--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -116,6 +116,25 @@ h1, h2, h3, h4, h5, h6 {
   grid-gap: 15px;
 }
 
+.template-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.template-post .thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.template-post .thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /** Sidebar */
 .primary-sidebar {
   padding: 0 0 20px 40px;
