--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -129,6 +129,25 @@ h1, h2,h3, h4, h5, h6 {
   }
 }
 
+.template-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  .thumbnail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 10px;
+  }
+  .thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 /** Sidebar */
 .primary-sidebar {
   padding: 0 0 20px 40px;
