--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -116,6 +116,21 @@ h1, h2, h3, h4, h5, h6 {
   grid-gap: 15px;
 }
 
+.btn-primary {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  padding: 12px 16px;
+  max-width: fit-content;
+  margin: 20px auto;
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+  background-color: #F6A627;
+  color: #1F2937;
+}
+
 .template-post {
   display: flex;
   flex-direction: column;
